# sick-volume-scanner

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: CoLaCommand.h.3656E6D9B0B7AB04.idx  CoLaCommandType.h.D794551A33F110D1.idx  CoLaError.h.A64416B8FA65C2D0.idx  ControlSession.h.AFDC0C09B6E923FE.idx  FrameGrabber.h.52775ACF6738C29F.idx  FrameGrabberBase.h.D5FE8ECB3C83FAB2.idx  IAuthentication.h.20126BB9E137125F.idx  IProtocolHandler.h.C77B51994E404693.idx  ITransport.h.79AB638FB1F28081.idx  PointXYZ.h.3B1ACA34A7721D55.idx  TcpSocket.h.80892E87768EC558.idx  VisionaryControl.h.FEAD7C6B1D1FF8F7.idx  VisionaryData.h.D06555FEBD7577A8.idx  VisionaryDataStream.h.9E56EE327AE1DEBD.idx  VisionarySData.h.22FB65588E151DF3.idx  main.cpp.1C87CF3892A9C6F3.idx
src/: main.cpp  main_test.cpp  test.py
